# librarium

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  TODO.md  config.example.toml  docker-compose.yml  package-lock.json  targets.toml
.github/workflows/: ci.yml  release.yml
benches/: markdown_benchmarks.rs
crates/codex-server/: Cargo.toml
crates/codex-server/src/: lib.rs  main.rs
crates/codex-server/src/config/: mod.rs
crates/codex-server/src/middleware/: mod.rs  rate_limit.rs
crates/codex-server/src/models/: mod.rs
crates/codex-server/src/routes/: auth.rs  entities.rs  files.rs  oidc.rs  totp.rs
crates/codex-server/tests/: api_integration.rs  auth_group_sharing.rs  entity_api_tests.rs  import_archive_tests.rs  ml_apply_undo_api.rs  oidc_state_tests.rs  preferences_per_user.rs  sync_verification.rs  worldbuilding_tests.rs  ws_authorization_tests.rs
crates/codex-types/src/: lib.rs
crates/librarium-client/: Cargo.toml
crates/librarium-client/src/: lib.rs
crates/librarium-server/: Cargo.toml
crates/librarium-server/data/indices/66a2bc66-7be2-4e1b-b155-eccb5744d5ff/: .managed.json  meta.json
crates/librarium-server/data/indices/793175ce-bc2d-4c16-a97f-a0f9f34787f7/: .managed.json  meta.json
crates/librarium-server/data/indices/8d3741d9-be16-4f6e-bfd4-1dffeade8427/: .managed.json  meta.json
crates/librarium-server/data/indices/a361767d-4466-468b-a4c1-558f94bc4265/: .managed.json  meta.json
crates/librarium-server/data/indices/c9a507c0-9587-4052-8fd4-2f0d5dd828f5/: .managed.json  meta.json
crates/librarium-server/data/indices/f81c4f6b-078b-4cad-a07c-6ce82260bd75/: .managed.json  meta.json
crates/librarium-server/src/: assets.rs  lib.rs  main.rs
crates/librarium-server/src/config/: mod.rs
crates/librarium-server/src/db/: mod.rs
crates/librarium-server/src/middleware/: auth.rs  request_id.rs
crates/librarium-server/src/models/: bookmarks.rs  mod.rs  plugin.rs  schema.rs
crates/librarium-server/src/routes/: auth.rs  bookmarks.rs  entities.rs  files.rs  invitations.rs  ml.rs  oidc.rs  plugins.rs  preferences.rs  search.rs  tags.rs  totp.rs  vaults.rs  ws.rs
crates/librarium-server/src/services/: embedding_service.rs  entity_service.rs  file_service.rs  frontmatter_service.rs  label_service.rs  ldap_provider.rs  local_lm_service.rs  markdown_service.rs  ml_service.rs  mod.rs  organize_service.rs  reindex_service.rs  relation_service.rs  schema_service.rs  search_service.rs  template_service.rs  wiki_link_service.rs
crates/librarium-server/src/watcher/: mod.rs
crates/librarium-server/tests/: api_integration.rs  auth_group_sharing.rs  entity_api_tests.rs  import_archive_tests.rs  ml_apply_undo_api.rs  ml_offline.rs  oidc_state_tests.rs  preferences_per_user.rs  sync_verification.rs  worldbuilding_tests.rs  ws_authorization_tests.rs
crates/librarium-tauri/: Cargo.toml  tauri.conf.json
crates/librarium-tauri/capabilities/: default.json
crates/librarium-tauri/loading/: index.html
crates/librarium-tauri/src/: main.rs  paths.rs
crates/librarium-types/: Cargo.toml
crates/librarium-types/src/: lib.rs
deploy/systemd/: librarium.service.template
docs/: ADVANCED_FEATURES.md  API.md  ARCHITECTURE.md  BUILD.md  CONFIGURATION.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOY_TUI.md  DESIGN.md  DESKTOP_FEATURE_PARITY_PLAN.md  DOCKER.md  FRONTMATTER_PLAN.md  IMPLEMENTATION_SUMMARY.md  LIBRARIUM_OVERVIEW.md  MARKDOWN_TEST_COVERAGE.md  ORGANIZATION_ML_PLAN.md  PLAN-desktop-sync-multiuser.md  PLUGIN_API.md  PLUGIN_PARITY_ROADMAP.md  PLUGIN_UI_IMPLEMENTATION.md  PROPERTY_TYPES_SPEC.md  TAG_SYSTEM_SPEC.md  TASK_8.1_COMPLETION.md  TASK_9.2_COMPLETION.md  TASK_9_COMPLETION.md  TEST_PLAN.md  USER_GUIDE.md  tauri_desktop_plan.md  unified_auth_plan.md
docs/archive/: CANVAS_DATA_MODEL.md  CANVAS_INTEGRATION_PLAN.md  CONFIGURATION.md  PLUGIN_ARCHITECTURE.md  PLUGIN_PARITY_ROADMAP.md  TEMPLATES_SYSTEM.md  UI_TEST_PLAN.md  VUE_PORT_AND_API_PLAN.md  WEBKITGTK_COMPAT.md  WORLDBUILDING_BRAINSTORMING_CONTEXT.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
frontend/src/: App.vue  test-setup.ts
frontend/src/api/: client.test.ts  client.ts  types.ts
frontend/src/components/: PluginStatusBar.vue  StatusBar.vue  TopBar.vue
frontend/src/composables/: useDeleteNote.ts  useNotifications.test.ts  useNotifications.ts  usePlugins.ts  useWebSocket.ts
frontend/src/editor/: structural-utils.test.ts  structural-utils.ts
frontend/src/layouts/: MainLayout.vue
frontend/src/pages/: LoginPage.vue  OidcCallbackPage.vue
frontend/src/plugins/: vuetify.ts
frontend/src/stores/: auth.test.ts  auth.ts  files.ts  indexing.ts  plugins.ts  preferences.ts  tabs.ts  ui.ts
frontend/src/utils/: fileTreeDrag.ts
frontend/tests/e2e/: 01-authentication.spec.ts
frontend/tests/ui/: auth_and_password_flows.spec.ts  context_menu.spec.ts  entity_relations_panel.spec.ts  file_tree.spec.ts  import_upload.spec.ts  new_entity.spec.ts  plugin_manager.spec.ts  structural_editor.spec.ts  worldbuilding_plugin_flow.spec.ts
logs/: codex.log.2026-04-16  codex.log.2026-04-28  codex.log.2026-04-29
plugins/: README.md
plugins/backlinks/: main.js  manifest.json
plugins/daily-notes/: manifest.json
plugins/example-plugin/: manifest.json
plugins/word-count/: manifest.json
plugins/worldbuilding/: manifest.json
plugins/worldbuilding/templates/: character.md  event.md  faction.md  location.md
scripts/: build-portable-desktop.ps1  build-portable.ps1  codex.py  install-service-windows.ps1  librarium.py  package-server-deb.sh
tests/: api_integration_tests.rs  block_ref_tests.rs  commonmark_tests.rs  concurrent_operations_tests.rs  conflict_tests.rs  database_operations_tests.rs  embed_tests.rs  error_handling_tests.rs  file_crud_integration_tests.rs  frontmatter_tests.rs  link_display_tests.rs  performance_tests.rs  preferences_tests.rs  rendering_verification_tests.rs  security_tests.rs  tag_tests.rs  vault_api_tests.rs  vault_switching_tests.rs  websocket_notification_tests.rs  wiki_link_tests.rs
(+71 files in other folders)
