[workspace]
members = [
	"crates/codex-server",
	"crates/codex-types",
	"crates/codex-client",
	"crates/codex-tauri",
]
default-members = ["crates/codex-server"]
resolver = "2"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce parallel code generation units to increase optimization
panic = "abort"     # Abort on panic (reduces binary size by removing unwinding)
strip = true        # Strip symbols from binary

# Faster-to-build release profile for test deploys.
# ~3-5x quicker than [profile.release] in exchange for a ~30% larger binary
# and marginally weaker runtime perf. Use for iteration; keep [profile.release]
# for shipping production builds where size/perf matter.
[profile.release-fast]
inherits = "release"
opt-level = 3
lto = false
codegen-units = 16
strip = true
panic = "abort"

