[workspace]
members = [
	"crates/librarium-server",
	"crates/librarium-types",
	"crates/librarium-client",
	"crates/librarium-tauri",
]
default-members = ["crates/librarium-server"]
resolver = "2"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce parallel code generation units to increase optimization
panic = "abort"     # Abort on panic (reduces binary size by removing unwinding)
strip = true        # Strip symbols from binary

# Faster-to-build release profile for test deploys.
# ~3-5x quicker than [profile.release] in exchange for a ~30% larger binary
# and marginally weaker runtime perf. Use for iteration; keep [profile.release]
# for shipping production builds where size/perf matter.
[profile.release-fast]
inherits = "release"
opt-level = 3
lto = false
codegen-units = 16
strip = true
panic = "abort"

