[package]
name = "librarium-server"
version = "0.100.0"
edition = "2021"

[lib]
name = "librarium"
path = "src/lib.rs"

[[bin]]
name = "librarium"
path = "src/main.rs"

[dependencies]
# Web framework
actix-web = { version = "4.9", features = ["rustls-0_23"] }
actix-files = "0.6"
actix-ws = "0.3"
actix-multipart = "0.7"
actix-cors = "0.7"

# Async runtime
tokio = { version = "1.42", features = ["full"] }
futures = "0.3"

# TLS support (optional server-side TLS via rustls)
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2.2"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
# preserve_order keeps JSON object key order as inserted (IndexMap) instead of
# sorting alphabetically. Frontmatter is parsed YAML→serde_json::Value and
# written back Value→YAML, so without this every frontmatter rewrite (tag edits,
# rename link-rewrite, ML apply, saves) would silently reorder the user's keys.
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml = "0.9"

# File watching
notify = "7.0"
notify-debouncer-full = "0.4"

# Markdown parsing
pulldown-cmark = "0.12"
pulldown-cmark-to-cmark = "18.0"

# Syntax highlighting
syntect = "5.2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
walkdir = "2.5"
regex = "1.11"
zip = "2.2"
tar = "0.4"
flate2 = "1.0"

# Configuration
config = "0.14"
dotenv = "0.15"

# Authentication
jsonwebtoken = "9"
argon2 = "0.5"

# TOTP / 2FA
totp-rs = { version = "5", features = ["gen_secret", "otpauth"] }
data-encoding = "2"

# OIDC / LDAP
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
ldap3 = "0.11"
urlencoding = "2"

# Utilities
rand = "0.9.2"
hex = "0.4"
sha2 = "0.10"
toml = { version = "0.8", features = ["parse"] }
rayon = "1.11.0"
rust-embed = "8.4"
mime_guess = "2.0"
image = { version = "0.24", default-features = false, features = [
    "jpeg",
    "png",
    "webp",
    "gif",
] }
clap = { version = "4", features = ["derive", "env"] }
librarium-types = { path = "../librarium-types" }
bytes = "1"
tantivy = { version = "0.22", default-features = false, features = ["mmap"] }
jsonschema = { version = "0.28", default-features = false }
tempfile = "3.14"

# Local keyphrase extraction (Tier 1 of the organization feature). Pure-Rust
# YAKE! implementation, no model download. MIT-licensed (matches this project).
# Only the English stopword list is bundled to keep the binary small.
yake-rust = { version = "1", default-features = false, features = ["en"] }

# Local ONNX sentence embeddings (Tier 2 of the organization feature). Heavy and
# pulls a native onnxruntime via `ort`, so it is OFF by default and gated behind
# the `embeddings` feature. Without it, the embeddings tier falls back to Tier 1.
fastembed = { version = "4", optional = true }

[features]
default = []
# Enable local semantic embeddings (downloads/loads an ONNX model at runtime).
embeddings = ["dep:fastembed"]

[dev-dependencies]
criterion = "0.5"
awc = "3.5"
actix-test = "0.1"
actix-http = "3.11"

[[bench]]
name = "markdown_benchmarks"
harness = false
path = "../../benches/markdown_benchmarks.rs"
